# HermeSpec

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/release/: mvp-readiness.md
examples/competitor-research/: expected-approval-summary.md  expected-proposal.md  expected-rejection.md  request.md
examples/notify-critical-alert/: expected-approval-summary.md  expected-proposal.md  expected-rejection.md  request.md
examples/scheduled-saas-audit/: expected-approval-summary.md  expected-proposal.md  expected-rejection.md  foundation-gaps.md  integration-gaps.md  request.md
hermes/: mcp-config.example.json
hermes/skills/openspec-contracts/: SKILL.md
openspec/: config.yaml
openspec/changes/add-external-action-schema/: proposal.md  tasks.md
openspec/changes/add-external-action-schema/specs/external-action-contract/: spec.md
openspec/changes/add-openspec-agent-contracts/: design.md  tasks.md
openspec/changes/add-openspec-agent-contracts/specs/openspec-agent-contracts/: spec.md
openspec/changes/archive/2026-05-07-add-openspec-agent-contracts/: proposal.md  tasks.md
openspec/changes/archive/2026-05-09-add-external-action-schema/: design.md  tasks.md
openspec/changes/archive/2026-05-09-add-external-action-schema/specs/openspec-agent-contracts/: spec.md
openspec/changes/archive/2026-05-18-add-research-contract/: design.md  proposal.md  tasks.md
openspec/specs/external-action-contract/: spec.md
openspec/specs/openspec-agent-contracts/: spec.md
openspec/specs/research-contract/: spec.md
schemas/: external-action.yaml
schemas/future/: external-action.yaml  research.yaml
src/openspec_mcp/: __init__.py  approvals.py  config.py  errors.py  filesystem.py  models.py  openspec_cli.py  server.py  service.py  validators.py
src/openspec_mcp/schemas/: research.yaml  scheduled-task.yaml
tests/: test_approvals.py  test_archive.py  test_config_and_cli.py  test_filesystem.py  test_hermes_integration.py  test_server.py  test_validation_and_propose.py
