[project]
name = "hermespec"
version = "0.1.0"
description = "OpenSpec-backed contract layer for long-running AI agents."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "HermeSpec Contributors"},
]
keywords = ["mcp", "openspec", "ai-agent", "contract", "approval"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "mcp>=1.0.0",
    "pyyaml>=6.0.0",
]

[project.urls]
Homepage = "https://github.com/hermespec/hermespec"
Repository = "https://github.com/hermespec/hermespec"
Issues = "https://github.com/hermespec/hermespec/issues"

[project.scripts]
openspec-mcp = "openspec_mcp.server:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/openspec_mcp"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
